ConsultingHub/force-app/main/default/objects/Product_Feature__c/Product_Feature__c.object-meta.xml
<CustomObject>
    <description>Products from Org62 
https://org62.lightning.force.com/lightning/r/Report/00O0M000008kd8NUAQ/view?queryScope=userFolders</description>
    <label>Product Feature</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Product Feature Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>