ConsultingHub/force-app/main/default/objects/Product_Feature__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics Cloud</fullName>
            </value>
            <value>
                <fullName>Community Cloud</fullName>
            </value>
            <value>
                <fullName>Einstein</fullName>
            </value>
            <value>
                <fullName>Field Service Lightning</fullName>
            </value>
            <value>
                <fullName>Lightning Platform</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>