ConsultingHub/force-app/main/default/objects/Product_Feature__c/fields/Product_Area__c.field-meta.xml
<CustomField>
    <fullName>Product_Area__c</fullName>
    <label>Product Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Einstein Analytics</fullName>
            </value>
            <value>
                <fullName>Einstein Discovery</fullName>
            </value>
            <value>
                <fullName>Reports &amp; Dashboards</fullName>
            </value>
            <value>
                <fullName>Service Delivery</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>DXP (Digital Experience Platform)</fullName>
            </value>
            <value>
                <fullName>Partner Experience Management</fullName>
            </value>
            <value>
                <fullName>Self Service Communities</fullName>
            </value>
            <value>
                <fullName>Einstein Platform</fullName>
            </value>
            <value>
                <fullName>Einstein Prediction Builder</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Dispatch Management</fullName>
            </value>
            <value>
                <fullName>Lightning Scheduler</fullName>
            </value>
            <value>
                <fullName>Mobile Experience &amp; Apps</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Products, Assets, &amp; Inventory</fullName>
            </value>
            <value>
                <fullName>Resource &amp; Time Management</fullName>
            </value>
            <value>
                <fullName>Scheduling &amp; Optimization</fullName>
            </value>
            <value>
                <fullName>Service Contracts &amp; Entitlements</fullName>
            </value>
            <value>
                <fullName>Work Management</fullName>
            </value>
            <value>
                <fullName>Advertising Studio</fullName>
            </value>
            <value>
                <fullName>Analytics Builder</fullName>
            </value>
            <value>
                <fullName>Audience Builder</fullName>
            </value>
            <value>
                <fullName>Audience Studio</fullName>
            </value>
            <value>
                <fullName>Automation Studio</fullName>
            </value>
            <value>
                <fullName>Content Builder</fullName>
            </value>
            <value>
                <fullName>Distributed Marketing</fullName>
            </value>
            <value>
                <fullName>Email Studio</fullName>
            </value>
            <value>
                <fullName>Google Analytics</fullName>
            </value>
            <value>
                <fullName>Interaction Studio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>