ConsultingHub/force-app/main/default/objects/Product_Feature__c/fields/Product_Executive__c.field-meta.xml
<CustomField>
    <fullName>Product_Executive__c</fullName>
    <label>Product Executive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>