ConsultingHub/force-app/main/default/objects/Product_Feature__c/fields/Product_Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Area__c</fullName>
    <label>Product Sub Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>App Framework</fullName>
            </value>
            <value>
                <fullName>Capacity optimization</fullName>
            </value>
            <value>
                <fullName>Charting</fullName>
            </value>
            <value>
                <fullName>Communities</fullName>
            </value>
            <value>
                <fullName>Connectors</fullName>
            </value>
            <value>
                <fullName>Dashboard Builder</fullName>
            </value>
            <value>
                <fullName>Data Prep ( Dataflow, Data Recipes, Replication)</fullName>
            </value>
            <value>
                <fullName>Einstein Discovery</fullName>
            </value>
            <value>
                <fullName>Einstein Prediction Builder</fullName>
            </value>
            <value>
                <fullName>Embedded Analytics</fullName>
            </value>
            <value>
                <fullName>Encryption and Data Security</fullName>
            </value>
            <value>
                <fullName>End User experience</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Enterprise Business Platform</fullName>
            </value>
            <value>
                <fullName>Explorer / Query Builder</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Industry Analytics Products</fullName>
            </value>
            <value>
                <fullName>ISVs</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Query Engine</fullName>
            </value>
            <value>
                <fullName>Sales Analytics App</fullName>
            </value>
            <value>
                <fullName>Scalability &amp; Performance</fullName>
            </value>
            <value>
                <fullName>SDK/Developers/Voice</fullName>
            </value>
            <value>
                <fullName>Service Analytics App</fullName>
            </value>
            <value>
                <fullName>Superpod architecture</fullName>
            </value>
            <value>
                <fullName>Tables</fullName>
            </value>
            <value>
                <fullName>Templates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>