ConsultingHub/force-app/main/default/objects/Product_Feature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Unit__c</columns>
    <columns>Product_Area__c</columns>
    <columns>Product_Sub_Area__c</columns>
    <columns>Product_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>